fix: add 40px gap below Import Schema dialog tabs

--- a/frontend/src/app/modules/schema-engine/import-schema/import-schema-dialog.component.scss
+++ b/frontend/src/app/modules/schema-engine/import-schema/import-schema-dialog.component.scss
@@ -31,6 +31,11 @@ form {
 }
 
 :host ::ng-deep {
+    .p-tabs {
+        display: block;
+        margin-bottom: 40px;
+    }
+
     .p-tab {
         padding: 0 !important;
     }
